--- a/instalasi/index.html
+++ b/instalasi/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Laporan Instalasi</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <div class="container">
@@ -28,17 +29,33 @@
 
     <div id="forms"></div>
 
-    <div class="btn-group">
-      <button class="add-instalasi" onclick="addForm('instalasi')"> + Instalasi</button>
-      <button class="add-reschedule" onclick="addForm('reschedule')"> + Reschedule</button>
-      <button class="add-maintenance" onclick="addForm('maintenance')"> + Maintenance</button>
-    </div>
+   <!-- Tambahkan di <head> -->
 
-    <div class="btn-group">
-      <button class="generate" onclick="generate()">Buat Laporan</button>
-      <button class="wa" onclick="sendWA()">Kirim via WhatsApp</button>
-      <button class="reset" onclick="resetLaporan()">Reset Laporan</button>
-    </div>
+
+<div class="btn-group">
+  <button class="add-instalasi" onclick="addForm('instalasi')">
+    <i class="fa-solid fa-plus"></i> Instalasi
+  </button>
+  <button class="add-reschedule" onclick="addForm('reschedule')">
+    <i class="fa-solid fa-calendar-days"></i> Reschedule
+  </button>
+  <button class="add-maintenance" onclick="addForm('maintenance')">
+    <i class="fa-solid fa-screwdriver-wrench"></i> Maintenance
+  </button>
+</div>
+
+<div class="btn-group">
+  <button class="generate" onclick="generate()">
+    <i class="fa-solid fa-file-alt"></i> Buat Laporan
+  </button>
+  <button class="wa" onclick="sendWA()">
+    <i class="fa-brands fa-whatsapp"></i> Kirim via WhatsApp
+  </button>
+  <button class="reset" onclick="resetLaporan()">
+    <i class="fa-solid fa-rotate-right"></i> Reset Laporan
+  </button>
+</div>
+
  <pre id="output"></pre>
  
   </div>
