--- a/instalasi/index.html
+++ b/instalasi/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
   <div class="container">
-    <h2>Laporan</h2>
-    <div class="subtitle">Instalasi, Reschedule & Maintenance</div>
+    <h2>UPDATE LAPORAN SUBANG</h2>
+    <div class="subtitle">Instalasi, Reschedule, dan Maintenance</div>
 
     <div class="date-display" id="currentDate">
       <!-- Ditampilkan oleh JavaScript -->
     </div>
 
     <div class="header-input">
-      <label>Judul Laporan</label>
-      <input type="text" id="reportTitle" value="LAPORAN INSTALASI SUBANG">
+      <label>Update Laporan Subang</label>
+      <input type="text" id="reportTitle" value="*UPDATE LAPORAN INSTALASI SUBANG*">
       
       <label>Tanggal Laporan</label>
       <input type="text" id="reportDate" placeholder="Contoh: Rabu, 24 September 2025">
@@ -62,5 +62,5 @@
 
   <script src="script.js"></script>
 </body>
-          </html>
+</html>
           
