--- a/instalasi/index.html
+++ b/instalasi/index.html
@@ -36,6 +36,7 @@
     <div class="btn-group">
       <button class="add-instalasi" onclick="addForm('instalasi')"> + Instalasi</button>
       <button class="add-reschedule" onclick="addForm('reschedule')"> + Reschedule</button>
+      <button class="add-cancel" onclick="addForm('cancel')"> + Cancel</button>
       <button class="add-maintenance" onclick="addForm('maintenance')"> + Maintenance</button>
     </div>
 
