--- a/gudang/index.html
+++ b/gudang/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Laporan Terminate</title>
+  <title>Laporan Gudang</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h2>Form Laporan Terminate Subang</h2>
-    <div class="subtitle">Terminate</div>
+    <h2>Form Laporan Gudang Subang</h2>
+    <div class="subtitle">Gudang</div>
 
     <div class="date-display" id="currentDate"></div>
 
     <div class="header-input">
       <label for="reportTitle">Judul Laporan</label>
-      <input type="text" id="ket{id}" value="LAPORAN TERMINATE SUBANG">
+      <input type="text" id="ket{id}" value="LAPORAN GUDANG SUBANG">
       
       <label for="reportDate">Tanggal Laporan</label>
       <input type="text" id="reportDate" placeholder="Contoh: Rabu, 24 September 2025">
@@ -27,7 +27,7 @@
     <div id="forms"></div>
 
     <div class="btn-group">
-      <button class="add-gudang" onclick="addForm('gudang')">+ Terminate</button>
+      <button class="add-gudang" onclick="addForm('gudang')">+ Gudang</button>
     </div>
 
     <div class="btn-group">
