--- a/kirimwhatsapp/index.html
+++ b/kirimwhatsapp/index.html
@@ -17,7 +17,7 @@
 
     
     <label for="message">Pesan</label>
-    <textarea id="message" placeholder="Tulis pesan anak muda..."rows="4"></textarea>
+    <textarea id="message" placeholder="Tulis pesan..."rows="4"></textarea>
 
     <button onclick="sendWA()">
   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" 
