--- a/kirimwhatsapp/index.html
+++ b/kirimwhatsapp/index.html
@@ -10,7 +10,7 @@
 <body>
   <body>
   <div class="card">
-    <h2>✨ ChatEZ ✨</h2>
+    <h2>Kirim Whatsapp</h2>
 
     <label for="phone">Nomor (tanpa 0/+)</label>
     <input type="tel" id="phone" placeholder="contoh: 628123456789">
