--- a/instalasi/index.html
+++ b/instalasi/index.html
@@ -43,8 +43,8 @@
         <i class="fas fa-screwdriver-wrench btn-icon"></i>Tambah Maintenance</button>
       <button class="add-jadwalulangmaintenance" onclick="addForm('jadwalulangmaintenance')">
          <i class="fas fa-arrows-rotate btn-icon"></i>Jadwal Ulang Maintenance</button>
-      <button class="add-cancelpemasangan" onclick="addForm('cancelpemasangan')">
-          <i class="fas fa-ban btn-icon"></i> Cancel Pemasangan</button>
+      <button class="add-cancelinstalasi" onclick="addForm('cancelinstalasi')">
+          <i class="fas fa-ban btn-icon"></i> Cancel Instalasi</button>
     </div>
 
     <div class="btn-group">
